--- a/background.html
+++ b/background.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
 </head>
 <body id="gradient">
-	<h1>Background Generator</h1>
+	<h1>Generate Your Background</h1>
 	<input class="color1" type="color" name="color1" value="#e453ff">
 	<input class="color2" type="color" name="color2" value="#22eff1">
 	<h2>Current CSS Background</h2>
