CSS title is changed

--- a/background.html
+++ b/background.html
@@ -10,7 +10,7 @@
 	<h1>Generate Your Background</h1>
 	<input class="color1" type="color" name="color1" value="#e453ff">
 	<input class="color2" type="color" name="color2" value="#22eff1">
-	<h2>Current CSS Background</h2>
+	<h2>Background Is Changed TO:</h2>
 	<h3></h3>
 
 
